# diffeq-pybamm

./: LICENSE  README.md  pyproject.toml
tests/: test_convert.py
